--- a/Angular_Client/src/app/video-list/video-list.component.html
+++ b/Angular_Client/src/app/video-list/video-list.component.html
@@ -2,7 +2,8 @@
   <thead>
       <tr>
           <th>#ID</th><th>片名</th><th>上映日期</th><th>類型</th>
-          <th></th>
+          <th> <i class="fas fa-plus-square fa-lg text-primary" (click)="onInsert()"></i>
+        </th>
       </tr>
   </thead>
   <tbody>
@@ -10,6 +11,9 @@
         <td (click)="populateForm(mr)">{{mr.id}}</td>
         <td (click)="populateForm(mr)">{{mr.title}}</td>
         <td (click)="populateForm(mr)">{{mr.releaseDate}}</td>
-        <td (click)="populateForm(mr)">{{mr.type}}</td>        
+        <td (click)="populateForm(mr)">{{mr.type}}</td>
+        <td >
+          <i class="far fa-trash-alt fa-lg text-danger" (click)="onDelete(mr)"></i>
+
       </tr>
   </tbody>
