--- a/Angular_Client/src/app/app.component.html
+++ b/Angular_Client/src/app/app.component.html
@@ -4,11 +4,12 @@
   <h1 class="display-4 text-center">電影資料設定</h1>
   <hr>
     <div class="row">
-      <div class="col-md 5">
+      <div class="col-md 12">
         <app-video-list></app-video-list>
       </div>
-
-      <div class="col-md 7">
+    </div>
+    <div class="row">
+      <div class="col-md 12">
         <app-video-detail> </app-video-detail>
       </div>
     </div>
