--- a/Angular_Client/src/app/video-detail/video-detail.component.html
+++ b/Angular_Client/src/app/video-detail/video-detail.component.html
@@ -74,7 +74,7 @@
 
       <!--Fontawesome搜尋Keyword Database的傳送鍵-->
       <div class="form-group">
-        <button class="btn btn-success btn-lg btn-block" type="submit" [disabled]="form.invalid">
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">
         <i class="fas fa-database"></i> Submit</button>
       </div>
 
