--- a/Angular_Client/src/app/app.component.html
+++ b/Angular_Client/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="jumbtron">
-  <h1 class="display-4 text-center">電影資料設定</h1>
+  <h1 class="display-4 text-center">電影 影劇 資料設定</h1>
   <hr>
     <div class="row">
       <div class="col-md 12">
