--- a/Angular_Client/src/app/video-detail/video-detail.component.html
+++ b/Angular_Client/src/app/video-detail/video-detail.component.html
@@ -14,7 +14,7 @@
    <div class="input-group">
     <div class="input-group-prepend">
       <div class="input-group-text bg-white">
-      <i class="fas fa-door-open"></i>
+        <i class="fas fa-users"></i>
      </div>
     </div>
         <input name="Starring" class="form-control" placeholder="主演"
@@ -24,7 +24,7 @@
      <div class="input-group">
       <div class="input-group-prepend">
          <div class="input-group-text bg-white">
-            <i class="fas fa-door-open"></i>
+          <i class="fas fa-clock"></i>
          </div>
       </div>
           <input name="ReleaseDate" class="form-control" placeholder="上映日期"
@@ -34,7 +34,7 @@
      <div class="input-group">
       <div class="input-group-prepend">
          <div class="input-group-text bg-white">
-            <i class="fas fa-door-open"></i>
+            <i class="fas fa-building"></i>
          </div>
       </div>
        <input name="MovieCompany" class="form-control" placeholder="公司"
@@ -44,7 +44,7 @@
     <div class="input-group">
         <div class="input-group-prepend">
            <div class="input-group-text bg-white">
-              <i class="fas fa-door-open"></i>
+            <i class="fas fa-align-justify"></i>
            </div>
         </div>
        <textarea name="MoviePlot" class="form-control" cols="10" rows="5" placeholder="劇情"
